# AI_Interview-main

./: .dockerignore  .gitignore  README.md  docker-compose.yml  docker_commands.md  package-lock.json  pyproject.toml  start_docker.bat  start_project.bat
backend/: .env.example  Dockerfile  README.md  api.py  app_config.py  database.py  identity_compare.py  interview_video_pipeline.py  logging_config.py  manager.py  requirements-core.txt  requirements-proctor.txt  requirements.txt  resume_analyzer.py  run_proctor_server.py  start_interview.bat  text_to_speech.py  workflow.py
backend/code_engine/: problem_loader.py  problems_200.json  problems_200_with_testcases.json  sample_problems.json  testcases.py
backend/data/: drills.json  parse_drills.py  parse_projects.py  raw_behavioral.txt  raw_projects.txt
backend/deploy/: Dockerfile.api  Dockerfile.proctor  README.md
backend/proctoring_engine/: __init__.py  service.py
backend/scratch/: debug_tts_500.py  fixed_ats.txt  format_intro.py  health_check.py  intro_data.json  merge_hr_questions.py  migrate_drills.py  repair_json.py  test_tts.py  user_hr_questions.json  verify_api.py
backend/services/: __init__.py  proctor_routes.py
backend/tests/: conftest.py  test_api_http.py  test_app_config.py  test_error_handler.py  test_workflow.py
backend/tools/: check_db.py  check_postgres_connection.py  check_proctor_deps.py  check_user.py  create_admin.py  dump_pdf.py  dump_pdf_start.py  finalize_postgres_setup.py  generate_sample.py  (+1 more)
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
(+32 files in other folders)
